--- a/Code/ACM/HDOJ/5317.md
+++ b/Code/ACM/HDOJ/5317.md
@@ -6,7 +6,7 @@
 
 `F(x)`的取值范围为`[1, 7]`。
 
-开个二维数组`sum[N][7]`求`F(x)`取值为`[1, 7]`的前缀和。
+开个二维数组`sum[N][7]`求`F(x)`取值为`[1, 7]`的个数的前缀和。
 
 `O(1)`查询区间`F(x)`不同取值的个数，根据情况输出答案。
 
